--- a/components/MainLayout/MainLayout.module.css
+++ b/components/MainLayout/MainLayout.module.css
@@ -7,16 +7,15 @@
   grid-column: 2/3;
   display: grid;
   min-height: 100vh;
-  grid-template-rows: 15% 65% 20%;
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   border: 1px solid #eeeff4;
   border-radius: 10px;
-  margin: 100px 0;
   padding: 90px 30px;
 }
 
