--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -14,6 +14,8 @@
 @media (max-width: 750px) {
   .header {
     margin: 30px;
+    justify-content: center;
+    align-items: center;
   }
 
   .header-logo {
